remove model training
Signed-off-by: Sam Herman <sam.herman@datastax.com>