@@ -5,13 +5,9 @@
 
 package org.opensearch.knn.plugin;
 
-import org.opensearch.cluster.NamedDiff;
-import org.opensearch.cluster.metadata.Metadata;
-import org.opensearch.core.ParseField;
 import org.opensearch.core.action.ActionResponse;
 import org.opensearch.index.codec.CodecServiceFactory;
 import org.opensearch.index.engine.EngineFactory;
-import org.opensearch.indices.SystemIndexDescriptor;
 import org.opensearch.knn.plugin.search.KNNConcurrentSearchRequestDecider;
 import org.opensearch.knn.index.util.KNNClusterUtil;
 import org.opensearch.knn.index.query.KNNQueryBuilder;
@@ -20,20 +16,9 @@ import org.opensearch.knn.index.mapper.KNNVectorFieldMapper;
 
 import org.opensearch.knn.index.query.parser.KNNQueryBuilderParser;
 import org.opensearch.knn.index.codec.KNNCodecService;
-import org.opensearch.knn.indices.ModelGraveyard;
-import org.opensearch.knn.indices.ModelCache;
-import org.opensearch.knn.indices.ModelDao;
-import org.opensearch.knn.plugin.rest.RestDeleteModelHandler;
-import org.opensearch.knn.plugin.rest.RestGetModelHandler;
 import org.opensearch.knn.plugin.rest.RestKNNStatsHandler;
-import org.opensearch.knn.plugin.rest.RestSearchModelHandler;
-import org.opensearch.knn.plugin.rest.RestTrainModelHandler;
 import org.opensearch.knn.plugin.script.KNNScoringScriptEngine;
 import org.opensearch.knn.plugin.stats.KNNStats;
-import org.opensearch.knn.plugin.transport.DeleteModelAction;
-import org.opensearch.knn.plugin.transport.DeleteModelTransportAction;
-import org.opensearch.knn.plugin.transport.GetModelAction;
-import org.opensearch.knn.plugin.transport.GetModelTransportAction;
 import org.opensearch.knn.plugin.transport.KNNStatsAction;
 import org.opensearch.knn.plugin.transport.KNNStatsTransportAction;
 import com.google.common.collect.ImmutableList;
@@ -55,24 +40,7 @@ import org.opensearch.env.NodeEnvironment;
 import org.opensearch.index.IndexModule;
 import org.opensearch.index.IndexSettings;
 import org.opensearch.index.mapper.Mapper;
-import org.opensearch.knn.plugin.transport.RemoveModelFromCacheAction;
-import org.opensearch.knn.plugin.transport.RemoveModelFromCacheTransportAction;
-import org.opensearch.knn.plugin.transport.SearchModelAction;
-import org.opensearch.knn.plugin.transport.SearchModelTransportAction;
-import org.opensearch.knn.plugin.transport.TrainingJobRouteDecisionInfoAction;
-import org.opensearch.knn.plugin.transport.TrainingJobRouteDecisionInfoTransportAction;
-import org.opensearch.knn.plugin.transport.TrainingJobRouterAction;
-import org.opensearch.knn.plugin.transport.TrainingJobRouterTransportAction;
-import org.opensearch.knn.plugin.transport.TrainingModelAction;
-import org.opensearch.knn.plugin.transport.TrainingModelTransportAction;
-import org.opensearch.knn.plugin.transport.UpdateModelMetadataAction;
-import org.opensearch.knn.plugin.transport.UpdateModelMetadataTransportAction;
-import org.opensearch.knn.plugin.transport.UpdateModelGraveyardAction;
-import org.opensearch.knn.plugin.transport.UpdateModelGraveyardTransportAction;
 import org.opensearch.knn.quantization.models.quantizationState.QuantizationStateCache;
-import org.opensearch.knn.training.TrainingJobClusterStateListener;
-import org.opensearch.knn.training.TrainingJobRunner;
-import org.opensearch.knn.training.VectorReader;
 import org.opensearch.plugins.ActionPlugin;
 import org.opensearch.plugins.EnginePlugin;
 import org.opensearch.plugins.ExtensiblePlugin;
@@ -97,8 +65,6 @@ import java.security.AccessController;
 import java.security.AllPermission;
 import java.security.Permission;
 import java.security.PrivilegedAction;
-import java.util.Arrays;
-import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
@@ -108,7 +74,6 @@ import java.util.function.Supplier;
 
 import static java.util.Collections.singletonList;
 import static org.opensearch.knn.common.KNNConstants.KNN_THREAD_POOL_PREFIX;
-import static org.opensearch.knn.common.KNNConstants.MODEL_INDEX_NAME;
 import static org.opensearch.knn.common.KNNConstants.TRAIN_THREAD_POOL;
 
 /**
@@ -177,10 +142,7 @@ public class JVectorKNNPlugin extends Plugin
 
     @Override
     public Map<String, Mapper.TypeParser> getMappers() {
-        return Collections.singletonMap(
-            KNNVectorFieldMapper.CONTENT_TYPE,
-            new KNNVectorFieldMapper.TypeParser(ModelDao.OpenSearchKNNModelDao::getInstance)
-        );
+        return Collections.singletonMap(KNNVectorFieldMapper.CONTENT_TYPE, new KNNVectorFieldMapper.TypeParser());
     }
 
     @Override
@@ -204,19 +166,9 @@ public class JVectorKNNPlugin extends Plugin
     ) {
         this.clusterService = clusterService;
 
-        // Initialize Native Memory loading strategies
-        VectorReader vectorReader = new VectorReader(client);
-
         KNNSettings.state().initialize(client, clusterService);
         KNNClusterUtil.instance().initialize(clusterService);
-        ModelDao.OpenSearchKNNModelDao.initialize(client, clusterService, environment.settings());
-        ModelCache.initialize(ModelDao.OpenSearchKNNModelDao.getInstance(), clusterService);
-        TrainingJobRunner.initialize(threadPool, ModelDao.OpenSearchKNNModelDao.getInstance());
-        TrainingJobClusterStateListener.initialize(threadPool, ModelDao.OpenSearchKNNModelDao.getInstance(), clusterService);
         QuantizationStateCache.setThreadPool(threadPool);
-        KNNQueryBuilder.initialize(ModelDao.OpenSearchKNNModelDao.getInstance());
-
-        clusterService.addListener(TrainingJobClusterStateListener.getInstance());
 
         return ImmutableList.of(new KNNStats());
     }
@@ -237,18 +189,8 @@ public class JVectorKNNPlugin extends Plugin
     ) {
 
         RestKNNStatsHandler restKNNStatsHandler = new RestKNNStatsHandler();
-        RestGetModelHandler restGetModelHandler = new RestGetModelHandler();
-        RestDeleteModelHandler restDeleteModelHandler = new RestDeleteModelHandler();
-        RestTrainModelHandler restTrainModelHandler = new RestTrainModelHandler();
-        RestSearchModelHandler restSearchModelHandler = new RestSearchModelHandler();
 
-        return ImmutableList.of(
-            restKNNStatsHandler,
-            restGetModelHandler,
-            restDeleteModelHandler,
-            restTrainModelHandler,
-            restSearchModelHandler
-        );
+        return ImmutableList.of(restKNNStatsHandler);
     }
 
     /**
@@ -256,18 +198,7 @@ public class JVectorKNNPlugin extends Plugin
      */
     @Override
     public List<ActionHandler<? extends ActionRequest, ? extends ActionResponse>> getActions() {
-        return Arrays.asList(
-            new ActionHandler<>(KNNStatsAction.INSTANCE, KNNStatsTransportAction.class),
-            new ActionHandler<>(UpdateModelMetadataAction.INSTANCE, UpdateModelMetadataTransportAction.class),
-            new ActionHandler<>(TrainingJobRouteDecisionInfoAction.INSTANCE, TrainingJobRouteDecisionInfoTransportAction.class),
-            new ActionHandler<>(GetModelAction.INSTANCE, GetModelTransportAction.class),
-            new ActionHandler<>(DeleteModelAction.INSTANCE, DeleteModelTransportAction.class),
-            new ActionHandler<>(TrainingJobRouterAction.INSTANCE, TrainingJobRouterTransportAction.class),
-            new ActionHandler<>(TrainingModelAction.INSTANCE, TrainingModelTransportAction.class),
-            new ActionHandler<>(RemoveModelFromCacheAction.INSTANCE, RemoveModelFromCacheTransportAction.class),
-            new ActionHandler<>(SearchModelAction.INSTANCE, SearchModelTransportAction.class),
-            new ActionHandler<>(UpdateModelGraveyardAction.INSTANCE, UpdateModelGraveyardTransportAction.class)
-        );
+        return List.of(new ActionHandler<>(KNNStatsAction.INSTANCE, KNNStatsTransportAction.class));
     }
 
     @Override
@@ -323,30 +254,6 @@ public class JVectorKNNPlugin extends Plugin
     @Override
     public List<ExecutorBuilder<?>> getExecutorBuilders(Settings settings) {
         return ImmutableList.of(new FixedExecutorBuilder(settings, TRAIN_THREAD_POOL, 1, 1, KNN_THREAD_POOL_PREFIX, false));
-    }
-
-    @Override
-    public List<NamedWriteableRegistry.Entry> getNamedWriteables() {
-        List<NamedWriteableRegistry.Entry> entries = new ArrayList<>();
-
-        entries.add(new NamedWriteableRegistry.Entry(Metadata.Custom.class, ModelGraveyard.TYPE, ModelGraveyard::new));
-        entries.add(new NamedWriteableRegistry.Entry(NamedDiff.class, ModelGraveyard.TYPE, ModelGraveyard::readDiffFrom));
-        return entries;
-    }
-
-    @Override
-    public List<NamedXContentRegistry.Entry> getNamedXContent() {
-        List<NamedXContentRegistry.Entry> entries = new ArrayList<>();
-
-        entries.add(
-            new NamedXContentRegistry.Entry(Metadata.Custom.class, new ParseField(ModelGraveyard.TYPE), ModelGraveyard::fromXContent)
-        );
-        return entries;
-    }
-
-    @Override
-    public Collection<SystemIndexDescriptor> getSystemIndexDescriptors(Settings settings) {
-        return ImmutableList.of(new SystemIndexDescriptor(MODEL_INDEX_NAME, "Index for storing models used for k-NN indices"));
     }
 
     @Override
